# Converter

./: .gitignore  CHANGELOG.md  README.md  api.py  config.py  converter.py  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  start.py  style.css  utils.py
outputs/: .gitkeep
uploads/: .gitkeep
